[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genblaze-core"
version = "0.3.5"
description = "Core SDK for genblaze media generation orchestration"
authors = [{name = "Jeronimo De Leon", email = "jdeleon@backblaze.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries",
]
keywords = ["genblaze", "ai", "media", "manifest", "provenance", "c2pa-ready", "genai", "pipeline", "sdk"]

dependencies = [
    "pydantic>=2.0,<3",
    "pillow>=10.0",
    # urllib3 is imported unguarded at module load in storage/transfer.py
    # (the shared PoolManager backing AssetTransfer's presigned-URL streaming),
    # and storage/__init__ imports transfer eagerly — so `import
    # genblaze_core.storage` hard-requires it on a clean install. It used to
    # arrive only transitively via a connector's boto3 stack; declaring it
    # closes the same crash class as the replicate/httpx fix (#37/#106).
    # >=1.26 for the Retry(allowed_methods=...) API; <3 matches the repo's
    # bounded-major convention (cf. pydantic<3) and resolves cleanly against
    # boto3/botocore's urllib3 cap (botocore<=1.31 wants <1.27 → 1.26.x; newer
    # botocore allows 2.x — both inside <3).
    "urllib3>=1.26,<3",
]

[project.urls]
Homepage = "https://github.com/backblaze-labs/genblaze"
Documentation = "https://github.com/backblaze-labs/genblaze"
Repository = "https://github.com/backblaze-labs/genblaze"
Changelog = "https://github.com/backblaze-labs/genblaze/blob/main/CHANGELOG.md"
Issues = "https://github.com/backblaze-labs/genblaze/issues"

[project.optional-dependencies]
parquet = ["pyarrow>=14.0"]
# <1.49: mutagen 1.48 changed m4a timescale handling in a way that broke our
# test fixture (#108); cap until 1.49 is vetted against the test suite.
audio = ["mutagen>=1.47,<1.49"]
# Soft integrations: imported behind guards (try/except ImportError or
# function-local), so core stays installable without them. Advertised as
# extras so callers can opt in explicitly. http floor matches the connectors
# already on httpx>=0.24 (nvidia, gmicloud, stability-audio, replicate).
http = ["httpx>=0.24"]
otel = ["opentelemetry-api>=1.20"]
# Additional linear-time gate for providers/pattern_safety.py's ReDoS guard
# (issue #80), on top of the static heuristic that always runs regardless
# (issue #148 — re2 accepting a pattern doesn't make it safe under the
# stdlib `re` engine actually used at match time). Guarded at the import
# site (try/except ImportError) and absent by default. google-re2 ships
# prebuilt wheels for macOS, manylinux (x86_64/aarch64), and Windows across
# the Python versions this repo supports, so declaring it here (and in
# `dev`, below) is low-risk and is what actually activates this extra gate
# in CI.
re2 = ["google-re2>=1.0"]
# genblaze_core.testing ships in the wheel and is a public, documented surface
# (MockProvider/ProviderComplianceTests — see connector test suites and the
# langsmith README). It imports pytest at module load, so it's only usable with
# this extra installed: `pip install "genblaze-core[testing]"`.
testing = ["pytest>=7.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "deptry>=0.23",
    "pyarrow>=14.0",
    # <1.49: mutagen 1.48 changed m4a timescale handling in a way that broke our
    # test fixture (#108); cap until 1.49 is vetted against the test suite.
    "mutagen>=1.47,<1.49",
    "jsonschema>=4.0",
    "hypothesis>=6.0",
    "httpx>=0.24",
    "opentelemetry-api>=1.20",
    "google-re2>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["genblaze_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.coverage.run]
source = ["genblaze_core"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 70

[tool.deptry]
# Treat the `dev` extra as dev-only tooling so deptry doesn't flag pytest,
# ruff, mypy, etc. as unused declared deps (DEP002).
optional_dependencies_dev_groups = ["dev"]

[tool.deptry.per_rule_ignores]
# botocore: core touches botocore exception types only inside
# classify_botocore_error, reached exclusively from connector code
# (genblaze-s3) that has already imported botocore. Declaring it in core would
# wrongly pull boto3's stack into a storage-only install.
DEP001 = ["botocore"]
DEP003 = ["botocore"]

[tool.deptry.package_module_name_map]
# opentelemetry-api (the `otel` extra) ships the top-level `opentelemetry`
# module; map it so the guarded observability imports resolve to the
# declaration without requiring the extra to be installed.
opentelemetry-api = ["opentelemetry"]
# google-re2 (the `re2` extra) ships a top-level `re2` module — map it so
# pattern_safety.py's guarded `import re2` resolves to the declaration
# without requiring the extra to be installed.
google-re2 = ["re2"]
