[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genblaze-decart"
version = "0.2.0"
description = "Decart Lucy video/image provider adapter for genblaze"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "genblaze-core>=0.2.0,<0.3",
    "decart>=0.0.28",
]

[project.urls]
Documentation = "https://github.com/backblaze-labs/genblaze"
Repository = "https://github.com/backblaze-labs/genblaze"
Issues = "https://github.com/backblaze-labs/genblaze/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.entry-points."genblaze.providers"]
decart = "genblaze_decart:DecartVideoProvider"
decart-image = "genblaze_decart:DecartImageProvider"

[tool.hatch.build.targets.wheel]
packages = ["genblaze_decart"]

[tool.pytest.ini_options]
testpaths = ["tests"]
