[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genblaze-decart"
version = "0.3.1"
description = "Decart Lucy video/image provider adapter for genblaze"
authors = [{name = "Jeronimo De Leon", email = "jdeleon@backblaze.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries",
]
keywords = ["genblaze", "ai", "media", "manifest", "provenance", "c2pa-ready", "genai", "pipeline", "decart", "video", "image"]

dependencies = [
    "genblaze-core>=0.3.4,<0.4",
    # <1: bounded-major convention (#61) — decart is pre-1.0, so this caps at
    # its next major (matches the assemblyai/hume precedent for other
    # pre-1.0 SDKs elsewhere in this repo) rather than inventing a
    # next-minor rule for this one package.
    "decart>=0.0.28,<1",
]

[project.urls]
Homepage = "https://github.com/backblaze-labs/genblaze"
Documentation = "https://github.com/backblaze-labs/genblaze"
Repository = "https://github.com/backblaze-labs/genblaze"
Issues = "https://github.com/backblaze-labs/genblaze/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.entry-points."genblaze.providers"]
decart = "genblaze_decart:DecartVideoProvider"
decart-image = "genblaze_decart:DecartImageProvider"

[tool.hatch.build.targets.wheel]
packages = ["genblaze_decart"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.deptry]
# Treat the `dev` extra as dev-only tooling so deptry does not flag pytest
# (and other test-only deps) as unused declared deps (DEP002).
optional_dependencies_dev_groups = ["dev"]
