[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genblaze-elevenlabs"
version = "0.1.0"
description = "ElevenLabs TTS and sound effects provider adapter for genblaze"
readme = "../../../README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "genblaze-core>=0.1.0,<0.2",
    "elevenlabs>=2.0",
]

[project.urls]
Documentation = "https://www.backblaze.com/docs/"
Repository = "https://github.com/backblaze-labs/genblaze"
Issues = "https://github.com/backblaze-labs/genblaze/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.entry-points."genblaze.providers"]
elevenlabs-tts = "genblaze_elevenlabs:ElevenLabsTTSProvider"
elevenlabs-sfx = "genblaze_elevenlabs:ElevenLabsSFXProvider"

[tool.hatch.build.targets.wheel]
packages = ["genblaze_elevenlabs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
