[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genblaze-gmicloud"
version = "0.1.0"
description = "GMICloud video provider adapter for genblaze"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "genblaze-core>=0.1.0",
    "gmicloud>=0.1.10",
]

[project.urls]
Documentation = "https://genblaze.dev"
Repository = "https://github.com/backblaze-b2-samples/genblaze"
Issues = "https://github.com/backblaze-b2-samples/genblaze/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.entry-points."genblaze.providers"]
gmicloud = "genblaze_gmicloud:GMICloudVideoProvider"

[tool.hatch.build.targets.wheel]
packages = ["genblaze_gmicloud"]

[tool.pytest.ini_options]
testpaths = ["tests"]
