[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genblaze-gmicloud"
version = "0.2.1"
description = "GMICloud media provider adapters for genblaze (video, image, audio)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "genblaze-core>=0.2.0,<0.3",
    "httpx>=0.24",
]

[project.urls]
Documentation = "https://github.com/backblaze-labs/genblaze"
Repository = "https://github.com/backblaze-labs/genblaze"
Issues = "https://github.com/backblaze-labs/genblaze/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.entry-points."genblaze.providers"]
gmicloud = "genblaze_gmicloud:GMICloudVideoProvider"
gmicloud-image = "genblaze_gmicloud:GMICloudImageProvider"
gmicloud-audio = "genblaze_gmicloud:GMICloudAudioProvider"

[tool.hatch.build.targets.wheel]
packages = ["genblaze_gmicloud"]

[tool.pytest.ini_options]
testpaths = ["tests"]
