[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genblaze-google"
version = "0.1.0"
description = "Google provider adapters for genblaze (Veo video, Imagen image)"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "genblaze-core>=0.1.0",
    "google-genai>=1.0",
]

[project.urls]
Documentation = "https://www.backblaze.com/docs/"
Repository = "https://github.com/backblaze-labs/genblaze"
Issues = "https://github.com/backblaze-labs/genblaze/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.entry-points."genblaze.providers"]
google-veo = "genblaze_google:VeoProvider"
google-imagen = "genblaze_google:ImagenProvider"

[tool.hatch.build.targets.wheel]
packages = ["genblaze_google"]

[tool.pytest.ini_options]
testpaths = ["tests"]
