[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genblaze-hume"
version = "0.3.2"
description = "Hume AI (Octave TTS) provider adapter for genblaze"
authors = [{name = "Kamren Mahaney", email = "kmahaney@backblaze.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries",
]
keywords = ["genblaze", "ai", "media", "manifest", "provenance", "c2pa-ready", "genai", "pipeline", "hume", "octave", "tts", "audio"]

dependencies = [
    "genblaze-core>=0.3.4,<0.4",
    # The provider passes `version` (octave-1/-2 → Octave version) and
    # `temperature` to synthesize_json; both kwargs only exist together from
    # hume 0.13.13 (earlier 0.x raise TypeError on the octave-* path). Bounded
    # below 1.0 so a future major can't silently reshape these call sites.
    "hume>=0.13.13,<1",
]

[project.urls]
Homepage = "https://github.com/backblaze-labs/genblaze"
Documentation = "https://github.com/backblaze-labs/genblaze"
Repository = "https://github.com/backblaze-labs/genblaze"
Issues = "https://github.com/backblaze-labs/genblaze/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.entry-points."genblaze.providers"]
hume-tts = "genblaze_hume:HumeTTSProvider"

[tool.hatch.build.targets.wheel]
packages = ["genblaze_hume"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.deptry]
# Treat the `dev` extra as dev-only tooling so deptry does not flag pytest
# (and other test-only deps) as unused declared deps (DEP002).
optional_dependencies_dev_groups = ["dev"]
