[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genblaze-langsmith"
version = "0.3.2"
description = "LangSmith tracer backend for genblaze"
authors = [{name = "Jeronimo De Leon", email = "jdeleon@backblaze.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
    "Topic :: Software Development :: Libraries",
]
keywords = ["genblaze", "ai", "media", "manifest", "provenance", "c2pa-ready", "genai", "pipeline", "langsmith", "observability", "tracing"]

dependencies = [
    "genblaze-core>=0.3.4,<0.4",
    # <1: bounded-major convention (#61) — langsmith is pre-1.0, so this caps
    # at its next major (matches the assemblyai/hume precedent for other
    # pre-1.0 SDKs elsewhere in this repo).
    "langsmith>=0.1.0,<1",
]

[project.urls]
Homepage = "https://github.com/backblaze-labs/genblaze"
Documentation = "https://github.com/backblaze-labs/genblaze"
Repository = "https://github.com/backblaze-labs/genblaze"
Issues = "https://github.com/backblaze-labs/genblaze/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["genblaze_langsmith"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.deptry]
# Treat the `dev` extra as dev-only tooling so deptry does not flag pytest
# (and other test-only deps) as unused declared deps (DEP002).
optional_dependencies_dev_groups = ["dev"]
