[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genblaze-luma"
version = "0.1.0"
description = "Luma Dream Machine video provider adapter for genblaze"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "genblaze-core>=0.1.0,<0.2",
    "lumaai>=1.0",
]

[project.urls]
Documentation = "https://github.com/backblaze-labs/genblaze"
Repository = "https://github.com/backblaze-labs/genblaze"
Issues = "https://github.com/backblaze-labs/genblaze/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.entry-points."genblaze.providers"]
luma = "genblaze_luma:LumaProvider"

[tool.hatch.build.targets.wheel]
packages = ["genblaze_luma"]

[tool.pytest.ini_options]
testpaths = ["tests"]
